--- a/client/templates/footer.html
+++ b/client/templates/footer.html
@@ -1,6 +1,7 @@
 <template name="footer">
 	<div class="footer">
 		<div class="user-menu">
+            {{> uploadImage}}
 			<span class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
 			<span></span>
 			<span>
