--- a/client/style.css
+++ b/client/style.css
@@ -1,10 +1,99 @@
+/*Channel styling*/
+.channel {
+    display: inline-block !important;
+    margin: 0 15px 0 0;
+    width: auto;
+
+}
+
+.listings-channels {
+    height: 100%;
+    border: red solid 1px;
+    height: 65px;
+
+}
+
+.badge {
+    margin-left: 15px;
+}
+
+.app-menu {
+
+    height: 65px;
+}
+
+.channel-list {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+
+}
+
 .channel:hover {
     cursor: pointer;
 }
+
 .channel-name {
-  text-decoration: none;
-  
+    text-decoration: none;
+    color: black;
+    width: 100%;
+    margin: 0;
+    border: red solid 1px;
+
 }
-.glyphicon{
-  cursor: pointer;
+
+.glyphicon {
+    cursor: pointer;
+}
+
+/*Footer area styling */
+.footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 80px;
+    background-color: #f5f5f5;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.footer > .container-fluid {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+
+}
+
+.footer > .container-fluid > .row > div {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
+
+.footer > .container-fluid > .row > div > * {
+    padding: 0;
+}
+
+.footer > .container-fluid > .row {
+    height: 100%;
+    max-width: 100%;
+    border: 1px solid red;
+    margin: 0;
+}
+
+.connection-icon {
+    height: 15px;
+    width: 15px;
+}
+
+.input-box_text {
+    width: 100%;
 }
