--- a/client/templates/channel.html
+++ b/client/templates/channel.html
@@ -1,10 +1,7 @@
 <template name="channel">
-	<li class="channel {{active}}">
-			<span>
-				<span class="prefix">#</span>
-				<a class="channel-name" href="/{{name}}" >{{name}}</a>
-			</span>
-			<span class="unread">
+	<li class="channel list-group-item {{active}}">
+            <a class="channel-name" href="/{{name}}" >#{{name}}</a>
+			<span class="badge">
 				0
 			</span>
 	</li>
