--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -1,11 +1,16 @@
 <template name="header">
-	<div class="header">
-		<div class="app-menu">Slug</div>
-		<div class="channel-menu">
-			<div class="channel-menu-name">
-				<span class="channel-menu_-refix">#</span>
-				{{currentChannel}}
-			</div>
-		</div>
-	</div>
+
+		<div class="app-menu col-md-3 left-panel">
+
+            <h2>Slug</h2>
+            {{> loginButtons}}
+
+        </div>
+		<!--<div class="channel-menu col-md-8">-->
+			<!--<div class="channel-menu-name">-->
+				<!--<span class="channel-menu_-refix">#</span>-->
+				<!--{{currentChannel}}-->
+			<!--</div>-->
+		<!--</div>-->
+
 </template>
