--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -1,16 +1,11 @@
 <template name="header">
 
-		<div class="app-menu col-md-3 left-panel">
+            <a id="header" href="#">Slug</a>
 
-            <h2>Slug</h2>
-            {{> loginButtons}}
-
-        </div>
 		<!--<div class="channel-menu col-md-8">-->
 			<!--<div class="channel-menu-name">-->
 				<!--<span class="channel-menu_-refix">#</span>-->
 				<!--{{currentChannel}}-->
 			<!--</div>-->
 		<!--</div>-->
-
 </template>
