--- a/client/style.css
+++ b/client/style.css
@@ -1,26 +1,69 @@
+/*General Styling */
+
+
+
+/* Header styling */
+
+.app-menu, .listings-channels {
+    /*border: red solid 1px;*/
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 7vh;
+}
+.app-menu {
+    z-index: 1;
+    text-align: center;
+    -webkit-box-shadow: -1px 7px 17px -5px rgba(0,0,0,0.66);
+    -moz-box-shadow: -1px 7px 17px -5px rgba(0,0,0,0.66);
+    box-shadow: -1px 7px 17px -5px rgba(0,0,0,0.66);
+}
+
+/*Section styling*/
+.left-panel {
+    background-color: #5C97BF;
+}
+.app-menu, .user-menu  {
+    background-color: #1e8bc3;
+    color: white;
+}
+.user-menu {
+    -webkit-box-shadow: -1px -5px 17px -5px rgba(0,0,0,0.66);
+    -moz-box-shadow: -1px -5px 17px -5px rgba(0,0,0,0.66);
+    box-shadow: -1px -5px 17px -5px rgba(0,0,0,0.66);
+}
+.user-interactive-panel {
+    height: 86vh;
+}
+#header {
+    margin: 0;
+    font-size: 50px;
+    color: white;
+}
+
 /*Channel styling*/
-.channel {
-    display: inline-block !important;
-    margin: 0 15px 0 0;
-    width: auto;
-
+#channel-name:hover {
+    cursor: pointer !important;
 }
-
-.listings-channels {
-    height: 100%;
-    border: red solid 1px;
-    height: 65px;
-
+.channel.active > #channel-name.channel-name {
+    background-color: #1E8BC3;
+    color: white;
 }
+/*.listings-channels {*/
+    /*height: 100%;*/
+    /*!*border: red solid 1px;*!*/
+    /*height: 65px;*/
+
+/*}*/
 
 .badge {
     margin-left: 15px;
 }
 
-.app-menu {
+/*.app-menu {*/
 
-    height: 65px;
-}
+    /*height: 65px;*/
+/*}*/
 
 .channel-list {
     margin: 0;
@@ -38,7 +81,7 @@
     color: black;
     width: 100%;
     margin: 0;
-    border: red solid 1px;
+    /*border: red solid 1px;*/
 
 }
 
@@ -48,16 +91,7 @@
 
 /*Footer area styling */
 .footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 80px;
-    background-color: #f5f5f5;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+    height: 7vh;
 }
 
 .footer > .container-fluid {
@@ -72,12 +106,19 @@
     height: 100%;
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*justify-content: center;*/
+    /*border: 1px solid red;*/
 
 }
-
+.input-area, .user-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    /*border: 1px solid red;*/
+}
 .footer > .container-fluid > .row > div > * {
     padding: 0;
 }
@@ -85,7 +126,7 @@
 .footer > .container-fluid > .row {
     height: 100%;
     max-width: 100%;
-    border: 1px solid red;
+
     margin: 0;
 }
 
@@ -94,6 +135,7 @@
     width: 15px;
 }
 
-.input-box_text {
-    width: 100%;
+.input-wrap {
+    width: 90%;
+    margin: auto;
 }
