--- a/client/templates/message.html
+++ b/client/templates/message.html
@@ -1,9 +1,9 @@
 <template name="message">
-    <div class="message">
+    <a href="#" class="list-group-item list-group-item-info message">
         <a href="" class="message-profile-pic"></a>
         <a href="" class="message-username">{{usernameFromId userId}}</a>
         <span class="message-timestamp">{{getTime timestamp}}</span>
         <span class="message-star"></span>
         <span class="message-content">{{text}}</span>
-    </div>
+    </a>
 </template>
