--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -1,6 +1,7 @@
 <template name="header">
 
             <a id="header" href="#">Slug</a>
+    <span>{{> loginButtons}}</span>
 
 		<!--<div class="channel-menu col-md-8">-->
 			<!--<div class="channel-menu-name">-->
