--- a/client/templates/createChannel.html
+++ b/client/templates/createChannel.html
@@ -1,3 +1,3 @@
 <template name="createChannel">
-    <a class="create-channel" href="/channel/crtChannel">Create new channel</a>
+    <a class="create-channel" href="/channel/crtChannel"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> </a>
 </template>
