--- a/client/templates/friend.html
+++ b/client/templates/friend.html
@@ -1,7 +1,7 @@
 <template name="friend">
     <!--Codes go here-->
 
-        <a id="friend-name" class="friend-name list-group-item" href="#" >
+        <a id="friend-name" class="friend-name list-group-item" href="/{{name}}" >
             <span class="name-text">{{name}}</span>
             <span class="connection-icon">
 			<img class="connection-icon"
