- Add friends as user click add as friend from dropdown menu

--- a/client/templates/message.html
+++ b/client/templates/message.html
@@ -4,7 +4,7 @@
         <div class="dropdown">
             <a href="" id="menu1" class="message-username dropdown-toggle" data-toggle="dropdown" >{{usernameFromId userId}}</a>
             <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                <li role="presentation"><a class ="add-friend" role="menuitem" tabindex="-1" href="#">Add as friend</a></li>
+                <li role="presentation"><a id="{{usernameFromId userId}}" class ="add-friend" role="menuitem" tabindex="-1" href="#">Add as friend</a></li>
                 <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Send a message</a></li>
                 <li role="presentation" class="divider"></li>
                 <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Profile</a></li>
