- User can now add friends to their friend list - User can privately talk to a friend in a private channel

--- a/client/templates/friendListing.html
+++ b/client/templates/friendListing.html
@@ -3,7 +3,7 @@
 
     <ul class="friend-list list-group">
         {{#each getFriends}}
-            {{>friend name=name}}
+            {{>friend userId=this}}
         {{/each}}
     </ul>
 
